--- a/home/styles/home.css
+++ b/home/styles/home.css
@@ -1,11 +1,11 @@
-.main-container{
-    max-width:1140px;
+.main-container {
+    max-width: 1140px;
     margin-right: auto;
     margin-left: auto;
     font-family: sans-serif;
-    
 }
-.input-form-field{
+
+.input-form-field {
     padding: .375rem .75rem;
     border-radius: 5px;
     box-shadow: 0px 0px 10px #cfcfcf;
@@ -14,39 +14,47 @@
     margin-right: 2%;
     outline: none;
 }
-.input-form-field:focus{
+
+.input-form-field:focus {
     border: none;
 }
-.info-section{
+
+.info-section {
     background-color: #f7f7f7;
     padding: 5% 0%;
 }
-.test-section{
+
+.test-section {
     padding: 5% 0%;
 }
-.card-container{
+
+.card-container {
     padding: 0 2%;
 }
-.test-image{
+
+.test-image {
     border-radius: 50px;
 }
-.test-card{
+
+.test-card {
     background-color: #dbdbdb;
     border-radius: 5%;
     padding: 2%;
     box-shadow: 0px 0px 5px #898888;
     width: 18%;
 }
-.button-container{
+
+.button-container {
     margin-top: 2%;
 }
-.category-card{
+
+.category-card {
     width: 20%;
 }
-.catoegory-icon{
+
+.catoegory-icon {
     width: 100%;
 }
-
 
 .footer {
     display: flex;
@@ -100,8 +108,19 @@
     font-size: 15px;
 }
 
-@media screen and (max-width: 767px){
-    .test-card{
+.footer_content ul {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
+}
+
+.footer_content a {
+    text-decoration: none;
+    color: black;
+}
+
+@media screen and (max-width: 767px) {
+    .test-card {
         width: 100%;
         margin-bottom: 5%;
         padding: 0%;
@@ -109,14 +128,14 @@
     .card-contents {
         padding: 4%;
     }
-    .button-container{
+    .button-container {
         margin-bottom: 5%;
     }
-    .category-card{
+    .category-card {
         width: 100%;
         margin-bottom: 5%;
     }
-    .catoegory-icon{
+    .catoegory-icon {
         width: 25%;
         margin: 0 auto;
     }
