--- a/common/styles/common.css
+++ b/common/styles/common.css
@@ -17,6 +17,61 @@ body{
 .flex-dir-col{
     flex-direction: column;
 }
+.top-banner-flex{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #282a35;
+}
+.logo{
+    width: 100%; height: auto;
+    max-width: 150px;
+
+}
+.nav-content-margin{
+    margin-top: auto;
+    margin-bottom: auto;
+	text-transform: uppercase;
+	color: white;
+	font-family: cursive;
+    font-size: 1.5em;
+}
+.content-banner{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://cdn.pixabay.com/photo/2017/09/11/15/34/animals-2739386_960_720.jpg");
+    height: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.hero-banner-font{
+
+    font-size: 3em;
+}
+
+.content-banner-text{
+    text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.mid-banner-flex{
+    display:flex;
+    justify-content: space-evenly;
+}
+.logo-log{
+    max-width: 80;
+    height: auto;
+}
+.main-container{
+    max-width:1140px;
+    margin-right: auto;
+    margin-left: auto;
+    font-family: sans-serif;
+    
+}
 .main-button{
     text-align: center;
     vertical-align: middle;
@@ -27,6 +82,18 @@ body{
     font-weight: 700;
     cursor: pointer;
     font-size: 16px;
+}
+.input-form-label{
+    display: inline-block;
+}
+.input-form-field{
+    padding: .375rem .75rem;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px #cfcfcf;
+    border: none;
+    font-size: 18px;
+    margin-right: 2%;
+    outline: none;
 }
 .button-blue{
     color: #fff;
@@ -71,6 +138,15 @@ body{
 .mbtm-3 {
     margin-bottom: 3%;
 }
+.mbtm-5 {
+    margin-bottom: 5%;
+}
+.pad-3{
+    padding: 3%;
+}
+.pad-2{
+    padding: 2%;
+}
 .margin-0{
     margin: 0;
 }
@@ -101,5 +177,8 @@ body{
     }
     .mob-sec-pad{
         padding: 2%;
+    }
+    .mob-flex-dir-col-rev{
+        flex-direction: column-reverse;
     }
 }
