--- a/common/styles/common.css
+++ b/common/styles/common.css
@@ -163,6 +163,9 @@ body {
 .pad-2{
     padding: 2%;
 }
+.pad-none{
+    padding: 0%;
+}
 .margin-0{
     margin: 0;
 }
@@ -239,14 +242,13 @@ body {
 .footer {
     display: flex;
     align-content: space-between;
-    background-color: lightgrey;
+    box-shadow: 0px 0px 15px #cfcfcf;
+    font-family: sans-serif;
 }
 
 .about_desc {
     text-align: left;
-    font-size: 13px;
     width: 300px;
-    line-height: 15px;
 }
 
 .left {
@@ -262,7 +264,6 @@ body {
     text-align: left;
     padding-right: 15px;
     width: 25%;
-    line-height: 24px;
 }
 
 .social_media {
@@ -274,7 +275,6 @@ body {
 .centered {
     text-align: left;
     width: 25%;
-    line-height: 24px;
 }
 
 .footer_heading {
@@ -285,7 +285,6 @@ body {
 
 .footer_content {
     margin: 4px;
-    font-size: 15px;
 }
 
 .footer_content ul {
