--- a/faq/styles/faq.css
+++ b/faq/styles/faq.css
@@ -12,14 +12,45 @@ li p {
     line-height: 23px;
 }
 
-.faq {
+p.faq {
     background-color: #eaf1fc;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+p.faq.active,
+p.faq.hover {
+    background-color: #cad4e4;
+}
+
+p.faq:after {
+    content: '\2795';
+    font-size: 13px;
+    color: #777;
+    float: left;
+    margin-right: 5px;
+}
+
+p.faq.active:after {
+    content: '\2796';
 }
 
 #faq_header {
     background-color: #e3e3e3;
     height: 200px;
     display: block;
+}
+
+p.ans {
+    transition: 0.4s ease-in-out;
+    overflow: hidden;
+    max-height: 0;
+    opacity: 0;
+}
+
+.ans.show {
+    opacity: 1;
+    max-height: 500px;
 }
 
 #faq_img {
