--- a/common/styles/common.css
+++ b/common/styles/common.css
@@ -40,6 +40,14 @@ body {
     font-size: 3em;
 }
 
+.m-top-2{
+    margin-top: 2%;
+}
+
+.m-bottom-4{
+    margin-bottom: 4%;
+}
+
 .content-banner-text{
     text-align: center;
   position: absolute;
