--- a/faq/styles/faq.css
+++ b/faq/styles/faq.css
@@ -5,6 +5,11 @@
 ul {
     font-size: 15px;
     list-style-type: none;
+    padding: 10px;
+}
+
+li {
+    margin: 10px;
 }
 
 li p {
@@ -28,7 +33,7 @@ p.faq:after {
     font-size: 13px;
     color: #777;
     float: right;
-    margin-right: 5px;
+    margin-left: 5px;
 }
 
 p.faq.active:after {
@@ -69,6 +74,34 @@ p.ans {
 
 .grey_text {
     color: #a2a4a6;
+}
+
+button {
+    height: 30px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #006bff;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 1.5;
+    border-radius: 5px;
+    font-weight: 700;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.input {
+    border: 1px solid grey;
+    border-radius: 5px;
+    height: 30px;
+    width: 88%;
+    padding: 2px 23px 2px 30px;
+    outline: 0;
+    background-color: #eaf1fc;
+}
+
+.search_faq {
+    padding: 0px !important;
 }
 
 @media screen and (max-width: 767px) {
