--- a/common/styles/common.css
+++ b/common/styles/common.css
@@ -294,7 +294,9 @@ body {
 .copyright-section{
     background-color: #006bff;
 }
-
+.overflow-wrap  {
+    overflow-wrap: break-word;
+}
 @media screen and (max-width: 767px) {
     .mob-flex-dir-col {
         flex-direction: column;
