--- a/learning/styles/learning.css
+++ b/learning/styles/learning.css
@@ -4,6 +4,11 @@
 .right-border{
     border-right: 1px solid lightgrey;
 }
+#comment-list{
+    height: 25em;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+}
 @media screen and (max-width: 767px) {
     .video-frame{
         height: 15em;
