--- a/learning/styles/learning.css
+++ b/learning/styles/learning.css
@@ -9,11 +9,18 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
 }
+.comment-box{
+    height: 5em;
+    width: 100%;
+}
 @media screen and (max-width: 767px) {
     .video-frame{
         height: 15em;
     }
     .right-border{
         border-right: none;
+    }
+    #comment-list{
+        height: 15em;
     }
 }
