--- a/teacher/styles/teacher.css
+++ b/teacher/styles/teacher.css
@@ -147,3 +147,32 @@ table {
   .width-80{
       width: 80%;
   }
+
+  .vertical-btn-center
+  {
+    margin: 0 auto;
+    display: block;
+  }
+
+
+
+  .myButton {
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	top:1px;
+}
+
+       
