--- a/common/styles/common.css
+++ b/common/styles/common.css
@@ -331,3 +331,20 @@ body {
         margin-bottom: 4%;
     }
 }
+
+
+.successMsg {
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:none;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+    justify-content: center;
+    width: 50%;
+}
